HISTORY

  Version 5.0.0  2010-12-
  ------------------------------------------------------------------------------
    beta2:
    - UD_LOG_FILE_PATH environment variable added to force save of debugging
      information to a log file. Intended for use in boot time interface
      and batch scripts.
    - a bug preventing the boot time defragmenter from being turned off fixed

    - the following translations were added:

      Indonesian

    - the following translations were updated:

      Spanish(ES), Czech, Belarusian, Ukrainian

    - Developers: winx_strdup, winx_vsprintf, winx_sprintf, winx_enable_dbg_log,
      winx_disable_dbg_log, winx_get_module_filename, winx_path_remove_filename,
      winx_path_remove_extension, winx_path_extract_filename, winx_create_path,
      winx_init_spin_lock, winx_acquire_spin_lock, winx_release_spin_lock,
      winx_destroy_spin_lock functions added to zenwinx library
    - udefrag_set_log_file_path function added to udefrag library

    beta1:
    - defragmentation algorithm reimplemented; partial defragmentation improved
    - ability to defragment MFT as well as other internal NTFS files
      on Windows XP and Windows Server 2003 was added
    - ability to defragment internal NTFS files on Windows 2000 was added
    - one huge bug was fixed in the boot time defragmenter, udefrag.dll and
      zenwinx.dll libraries - they all have had improper definition of the
      IO_STATUS_BLOCK structure used by many undocumented Windows API functions
    - a problem was fixed, where the abort flag was not cleared, when entering
      the interactive mode at boot time
    - actions to take after processing is done implemented as separate menu
    - file status was added to reports
    - current time was added to reports
    - ability to specify not only drive letters but also paths of files
      and folders added to the command line and the boot time interfaces
    - Explorer context menu handler reimplemented to be more reliable